--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,11 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/map_key"
         />
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version">
+
+        </meta-data>
     </application>
 
 </manifest>
