--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,7 @@ android {
 }
 
 dependencies {
+    implementation 'com.sothree.slidinguppanel:library:3.4.0'
     implementation 'com.github.bumptech.glide:glide:3.7.0'
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'com.yarolegovich:sliding-root-nav:1.0.2'
