Put_Calendar_activity

--- a/toyou/app/src/main/AndroidManifest.xml
+++ b/toyou/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
         <activity android:name=".MainActivity"/>
         <activity android:name=".Search_List"/>
         <activity android:name=".ChooseTransferList"/>
+        <activity android:name=".CalendarActivity"/>
 
         <meta-data
             android:name="com.naver.maps.map.CLIENT_ID"
