--- a/toyou/app/build.gradle
+++ b/toyou/app/build.gradle
@@ -8,7 +8,7 @@ android {
     buildToolsVersion "29.0.3"
 
     defaultConfig {
-        applicationId "com.example.toyou"
+        applicationId "com.rlqja.toyou"
         minSdkVersion 25
         targetSdkVersion 29
         versionCode 1
@@ -31,6 +31,8 @@ android {
 }
 
 dependencies {
+    implementation 'com.kakao.sdk:v2-link:2.0.0'
+    implementation 'com.kakao.sdk:v2-talk:2.0.0'
     implementation 'com.sothree.slidinguppanel:library:3.4.0'
     implementation 'org.jsoup:jsoup:1.11.3'
     implementation "org.jetbrains.anko:anko:$anko_version"
@@ -40,7 +42,6 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
@@ -49,6 +50,6 @@ dependencies {
     implementation("com.google.android.gms:play-services-location:16.0.0")
     //noinspection GradleCompatible
     implementation 'com.android.support:design:27.1.1'
-    implementation files('libs\\libDaumMapAndroid.jar')
+    implementation 'androidx.fragment:fragment-ktx:1.2.5'
 
 }
