--- a/toyou/app/src/main/AndroidManifest.xml
+++ b/toyou/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.toyou">
+    package="com.rlqja.toyou">
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
@@ -8,7 +8,6 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:usesCleartextTraffic="true"
@@ -18,19 +17,35 @@
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity"/>
+        <activity android:name=".FirstActivity"/>
+        <activity android:name=".MainActivity">
+                        <intent-filter>
+                            <action android:name="android.intent.action.VIEW" />
+                            <category android:name="android.intent.category.DEFAULT" />
+                            <category android:name="android.intent.category.BROWSABLE" />
+
+                            <data
+                                android:host="@string/kakaolink_host"
+                                android:scheme="@string/kakao_scheme" />
+                        </intent-filter>
+        </activity>
+
         <activity android:name=".Search_List"/>
         <activity android:name=".ChooseTransferList"/>
-        <activity android:name=".CalendarActivity"/>
+        <activity android:name="com.rlqja.toyou.CalendarActivity"/>
 
         <meta-data
             android:name="com.naver.maps.map.CLIENT_ID"
             android:value="w2gacxjh1s"
             />
+        <meta-data
+            android:name="com.kakao.sdk.AppKey"
+            android:value="@string/kakao_appkey" />
+
+
     </application>
 
 </manifest>
