--- a/toyou/build.gradle
+++ b/toyou/build.gradle
@@ -24,7 +24,7 @@ allprojects {
         maven{
             url 'https://navercorp.bintray.com/maps'
         }
-        
+        maven { url 'http://devrepo.kakao.com:8088/nexus/content/groups/public/' }
     }
 }
 
